--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,6 +15,8 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
+    min-height: 200vh;
+    overflow-x: hidden;
 }
 
 ul {
