--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -12,6 +12,7 @@
     padding-top: 32px;
     height: 100%; 
     justify-content: space-between; 
+    z-index: 10;
 }
 .sidebar-inside {
     display: flex;
