--- a/src/styles/sections.css
+++ b/src/styles/sections.css
@@ -10,12 +10,13 @@
     object-fit: cover;
     object-position: top;
     position: relative;
-    background-color: blue;
     display: block;
     
 }
 
-
+.content-md {
+    height: 20dvh;
+}
 .left {
     left: 0;
     margin-left: 4px;
@@ -42,4 +43,28 @@
     justify-content: center;
     font-weight: 400;
     letter-spacing: -0.2px;
+}
+
+
+.full-img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+
+#music-of-the-sun {
+    background-image: url(../assets/2005music_of_the_sun.jpg);
+    background-position: center;
+}
+
+.text-overlap {
+    width: 80%;
+    font-size: 32px;
+    color: var(--white);
+    text-align: center;
 }
